<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                      https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.genstar</groupId>
	<artifactId>genstar-gospl</artifactId>
	<version>1.0.3</version>
	<packaging>bundle</packaging>

	<properties>
		<maven.test.skip>true</maven.test.skip>
	</properties>

	<!-- Adding repositories is a bad idea
		(see http://blog.sonatype.com/2009/02/why-putting-repositories-in-your-poms-is-a-bad-idea/ )
		Yet it seems like the only solution here
		--> 
  	<repositories>
    <repository>
      <id>nuiton-release</id>
      <name>Nuiton Repository</name>
      <url>http://maven.nuiton.org/release/</url>
    </repository>
	</repositories>
 
	<dependencies>
		<dependency>
			<groupId>org.genstar</groupId>
			<artifactId>genstar-core</artifactId>
			<version>1.0.3</version>
		</dependency>
		<dependency>
			<groupId>com.thoughtworks.xstream</groupId>
			<artifactId>xstream</artifactId>
			<version>1.4.9</version>
		</dependency>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.7</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.7</version>
		</dependency>
		<dependency>
			<groupId>org.graphstream</groupId>
			<artifactId>gs-core</artifactId>
			<version>1.3</version>
		</dependency>
		<dependency>
			<groupId>org.graphstream</groupId>
			<artifactId>gs-algo</artifactId>
			<version>1.3</version>
		</dependency>
		<dependency>
  			<groupId>org.apache.commons</groupId>
  			<artifactId>commons-lang3</artifactId>
  			<version>3.5</version>
		</dependency>
		<dependency>
    		<groupId>org.apache.commons</groupId>
   			 <artifactId>commons-collections4</artifactId>
    		<version>4.0</version>
		</dependency>
		
		
		
	<!-- XML for bayesian network parsing https://mvnrepository.com/artifact/dom4j/dom4j -->
	<dependency>
		<groupId>jaxen</groupId>
		<artifactId>jaxen</artifactId>
		<version>1.1.1</version>
	</dependency>
	<dependency>
    	<groupId>dom4j</groupId>
    	<artifactId>dom4j</artifactId>
    	<version>1.6</version>
	</dependency>
	
	<!-- for dom4j (but surprinsingly not part of its maven dependancies !
	/!\ creates parsing errors for log4j
		<dependency>
		<groupId>jaxen</groupId>
		<artifactId>jaxen</artifactId>
		<version>1.1.1</version>
		</dependency>
		 -->	
		 
		 <!-- https://mvnrepository.com/artifact/net.sourceforge.htmlcleaner/htmlcleaner -->
	<dependency>
    	<groupId>net.sourceforge.htmlcleaner</groupId>
    	<artifactId>htmlcleaner</artifactId>
    	<version>2.6.1</version>
	</dependency>
	
	<!-- https://mvnrepository.com/artifact/nl.knaw.dans.common/dans-dbf-lib -->
	<!-- for DBF INSEE file format -->
	<dependency>
    	<groupId>nl.knaw.dans.common</groupId>
	    <artifactId>dans-dbf-lib</artifactId>
    	<version>1.0.0-beta-10</version>
	</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.5.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<version>3.2.0</version>
				<extensions>true</extensions>
				<configuration>
					<instructions>
						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
						<Bundle-Version>${project.version}</Bundle-Version>
						<Export-Package>gospl.*</Export-Package>
					</instructions>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<distributionManagement>
		<repository>
			<id>bintray-anrgenstar-genstar-packages</id>
			<name>anrgenstar-genstar-packages</name>
			<url>https://api.bintray.com/maven/anrgenstar/genstar-packages/genstar-gospl/;publish=1;override=1</url>
		</repository>
	</distributionManagement>


</project>
